--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.dll
 *.so
 *.dylib
+/backend/backend
+/backend/backend.exe
 
 # Test binary, built with `go test -c`
 *.test
@@ -26,4 +28,3 @@ go.work.sum
 
 *.http
 
-backend
