Started working with production data

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,5 +23,5 @@ GREED_EMAIL="EMAIL ADDRESS" #Email used for verification emails
 #Plaid API info, to handle to financial data aggregation
 PLAID_CLIENT_ID="YOUR CLIENT ID"
 PLAID_SECRET="YOUR SECRET KEY"    
-PLAID_HOST="YOUR HOST"
-AES_KEY="YOUR PLAID API KEY"
+
+AES_KEY="YOUR AES ENCRYPTION KEY"       #Used to encrypt Plaid access tokens
