Transaction string matching

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,8 +20,10 @@ RATE_REFRESH="0.2"            # Rate limiter token refresh rate, per second
 SENDGRID_API_KEY="YOUR API KEY HERE"
 GREED_EMAIL="EMAIL ADDRESS" #Email used for verification emails
 
-#Plaid API info, to handle to financial data aggregation
+#Plaid API info, to handle financial data aggregation
 PLAID_CLIENT_ID="YOUR CLIENT ID"
 PLAID_SECRET="YOUR SECRET KEY"    
+PLAID_SANDBOX="YOUR SANDBOX KEY"
+PLAID_WEBHOOK_URL="PLAID URL FOR WEBHOOKS"
 
 AES_KEY="YOUR AES ENCRYPTION KEY"       #Used to encrypt Plaid access tokens
