--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.1"
+          go-version-file: 'go.mod'
 
       - name: Run tests
         run: go test ./... -cover
@@ -32,7 +32,7 @@ jobs:
         - name: Set up Go
           uses: actions/setup-go@v5
           with:
-            go-version: "1.23.1"
+            go-version-file: 'go.mod'
 
         - name: Install staticcheck
           run: go install honnef.co/go/tools/cmd/staticcheck@latest
