--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,8 +37,11 @@ jobs:
         - name: Install staticcheck
           run: go install honnef.co/go/tools/cmd/staticcheck@latest
         
-        - name: Formats code
-          run: test -z $(go fmt ./...)
+        - name: Install gofumpt
+          run: go install mvdan.cc/gofumpt@latest
+
+        - name: Check formatting
+          run: test -z "$(gofumpt -l .)"
 
         - name: Run staticcheck
           run: staticcheck ./...
