--- a/cli/.env.example
+++ b/cli/.env.example
@@ -1,3 +1,3 @@
-SERVER_ADDRESS="http://localhost:3333" # Address of server to connect to
+SERVER_ADDRESS="http://localhost:3333" # Address of server to connect to, supports only 'http' and 'https' schemes
 LOCAL_DATABASE="greed.db"              # Local database name
 CONFIG_FILEPATH=".config/greed"        # Config 
