--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Run tests
         run: go test ./... -cover
 
+      - name: Install gosec  
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest 
+
+      - name: Run Go security check 
+        run: gosec --exclude-dir=cli/internal/database --exclude-dir=backend/internal/database ./...
+
   style:
       name: Style
       runs-on: ubuntu-latest
