--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -1,12 +1,13 @@
-# Build stage
+# Build 
 FROM golang:1.23-bullseye AS builder
 WORKDIR /app
-COPY cli/. .
-COPY models ./models
-RUN CGO_ENABLED=0 GOOS=linux go build -o greed-cli
+COPY go.mod go.sum ./
+COPY cli/ cli/
+COPY models/ models/
+RUN cd cli && CGO_ENABLED=0 GOOS=linux go build -o greed-cli
 
-# Runtime stage (optional, for smaller images)
+# Runtime 
 FROM debian:stable-slim
 WORKDIR /app
-COPY --from=builder /app/greed-cli /app/greed-cli
+COPY --from=builder /app/cli/greed-cli /app/greed-cli
 ENTRYPOINT ["/app/greed-cli"]
