--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,12 @@
 # Build stage
 FROM golang:1.23-bullseye AS builder
 WORKDIR /app
-COPY backend/. .
-COPY models ./models
-RUN CGO_ENABLED=0 GOOS=linux go build -o greed
+COPY go.mod go.sum ./
+COPY backend/ backend/
+COPY models/ models/
+RUN cd backend && CGO_ENABLED=0 GOOS=linux go build -o greed
 
 # Runtime
 FROM gcr.io/distroless/static
-COPY --from=builder /app/greed /greed
+COPY --from=builder /app/backend/greed /greed
 ENTRYPOINT ["/greed"]
