--- a/.github/workflows/BACKEND_CD.yml
+++ b/.github/workflows/BACKEND_CD.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Create application database
       run: |
         sudo apt-get update && sudo apt-get install -y postgresql-client
-        psql "postgres://postgres:${{ secrets.DB_PASSWORD }}@localhost:5432/postgres" -c "CREATE DATABASE \"greed_app\";" || echo "Database already exists, continuing..."
+        psql "postgres://postgres:${{ secrets.DB_PASSWORD }}@localhost:5432/postgres" -c "CREATE DATABASE \"greed-db\";" || echo "Database already exists, continuing..."
     
     - name: Run database migrations
       run:  goose -dir backend/sql/schema postgres "${{ secrets.MIGRATION_DB_URL }}" up
