--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -8,6 +8,7 @@ RUN cd cli && CGO_ENABLED=0 GOOS=linux go build -o greed-cli
 
 # Runtime 
 FROM debian:stable-slim
+RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY --from=builder /app/cli/greed-cli /app/greed-cli
 ENTRYPOINT ["/app/greed-cli"]
